<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.movie.MovieDetail">

        <ImageView
            android:id="@+id/img_backdrop"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/backdrop"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/movie_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_release"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_backdrop" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="8dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintBottom_toTopOf="@id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/movie_release_date"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_vote"
            app:layout_constraintLeft_toRightOf="@id/img_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/vote_count"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_rating"
            app:layout_constraintLeft_toRightOf="@id/img_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_release" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/vote_average"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_popularity"
            app:layout_constraintLeft_toRightOf="@id/img_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vote" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/popularity"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/tv_overview"
            app:layout_constraintLeft_toRightOf="@id/img_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rating" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/overview"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@id/btn_set_favorite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popularity" />

        <Button
            android:id="@+id/btn_set_favorite"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_from_favorite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:background="@android:color/white"
            android:padding="15dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>