<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <ImageView
            android:id="@+id/img_movie_poster"
            android:layout_width="58dp"
            android:layout_height="72dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_movie_poster"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_movie_title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_movie_poster"
            android:ellipsize="end"
            android:maxLines="5"
            tools:text="@string/movie_release_date" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>